# calcify

./: .gitignore  Cargo.toml  README.md  RELEASENOTES.md  universe3.msg
examples/universe_in_a_box/: main.rs  universe_in_a_box.rs
src/: lib.rs
src/collection/: mod.rs
src/collection/four_mat/: mod.rs
src/collection/four_mat/four_vec/: mod.rs
src/collection/four_mat/four_vec/three_mat/: mod.rs  three_vec.rs
src/collection/four_mat/four_vec/three_mat/three_vec/: mod.rs  serializable.rs
src/field/: mod.rs  three_field.rs  three_vec_field.rs
src/four_mat/: four_vec.rs  mod.rs
src/four_mat/four_vec/: mod.rs
src/three_mat/: mod.rs  three_vec.rs
src/three_mat/three_vec/: mod.rs
src/tree/: feedtree.rs  mod.rs
src/tree/branch/: mod.rs
src/tree/branch/collection/: bin.rs  mod.rs  point.rs  point_bin.rs
src/tree/collection/: mod.rs  point.rs
src/tree/collection/fitting/: mod.rs
src/tree/collection/four_mat/: mod.rs
src/tree/collection/four_mat/four_vec/: mod.rs
src/tree/collection/four_mat/four_vec/three_mat/: mod.rs
src/tree/collection/four_mat/four_vec/three_mat/three_vec/: mod.rs  serializable.rs
src/utils/: consts.rs  errors.rs  io.rs  mod.rs  serializable.rs
