[package]
name = "calcify"
description = "Physics vector library"
version = "0.5.3"
authors = ["JTPond <jtpond42@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/JTPond/calcify"
license = "MIT OR Apache-2.0"
keywords = ["linear_algebra","vector","tensor","matrix","physics"]
categories = ["science", "simulation"]

[dependencies]
rand = "0.6.1"

[dev-dependencies]
rand = "0.6.1"
threadpool = "1.7.1"

[badges]
maintenance = { status = "actively-developed" }
