[package]
name = "calcify"
description = "Physics vector library"
version = "0.8.2"
authors = ["JTPond <jtpond42@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/JTPond/calcify"
license = "MIT OR Apache-2.0"
keywords = ["linear_algebra","vector","scientific_computing","matrix","physics"]
categories = ["science", "simulation"]

[dependencies]
rand = "^0.6"
rmp = "^0.8"

[dev-dependencies]
rand = "^0.6"
rmp = "^0.8"
lazy_static = "^1.4"
chrono = "^0.4"
rayon = "^1.3"

[badges]
maintenance = { status = "actively-developed" }
